[package]
name = "suitspoof"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["devprogrmer"]
description = "DPI-bypass and IP-spoofing tunnel tool"
repository = "https://github.com/devprogrmer/suitspoof"

[dependencies]
aes = "0.8"
anyhow = "1"
arc-swap = "1"
async-channel = "2"
async-lock = "3"
async-net = "2"
async-trait = "0.1"
bytes = "1"
chacha20 = "0.10"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
ctr = "0.9"
dashmap = "6"
event-listener = "5"
futures-lite = "2"
generic-array = "0.14"
hex = "0.4"
hmac = "0.12"
libc = "0.2"
log = "0.4"
mimalloc = "0.1"
pnet_packet = "0.34"
quiche = "0.22"
quinn = "0.11"
rand = "0.8"
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
simplelog = "0.12"
socket2 = "0.5"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
